# city1mansion-mcworld-ai

./: ARCHITECTURE.md  QUICKSTART.md  README.md  launch_minecraftia.bat  launch_minecraftia.ps1  pyproject.toml
scripts/: seed_population.bat  seed_population.ps1  seed_population.py
src/: __init__.py  main.py
src/ai/: __init__.py  agent.py  decision_engine.py  memory.py  prompts.py
src/ai/roles/: __init__.py  construction_agent.py  economy_agent.py  explorer_agent.py  mayor_agent.py
src/city1mansion_mcworld_ai.egg-info/: SOURCES.txt  entry_points.txt
src/engine/: __init__.py  ai_manager.py  citizen.py  construction.py  crime.py  economy.py  exploration.py  gameloop.py  government.py  interaction.py  minecraft_connector.py  mining.py  save_system.py  simulation.py  utils.py  war.py  world.py
src/minecraft/: __init__.py  bridge.py  integration.py  plugin_hook.py  plugin_server.py
src/production/: __init__.py  engine.py  optimization.py  safety.py  state_store.py
src/simulation/: ai_civilization.py
src/world_actions/: __init__.py  executor.py
state/: production_state.json
tests/: test_ai_system.py  test_minecraft_bridge.py  test_minecraft_integration.py  test_plugin_integration.py  test_private_world_integration.py  test_production_runtime.py  test_simulator.py  test_specialized_agents.py  test_world_actions.py  test_world_state_execution.py
tests/tmp_minecraft_world/minecraftia/: actions.jsonl  plugin_commands.mcfunction  plugin_queue.jsonl
tmp_mc_world_test/datapacks/minecraftia_bridge/: pack.mcmeta
(+3 files in other folders)
